--- a/Arwin/inference_model.ipynb
+++ b/Arwin/inference_model.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nclass PositionalEncoding(nn.Module):\\n    def __init__(self, dim_model, dropout_p, max_len):\\n        super().__init__()\\n        # Modified version from: https://pytorch.org/tutorials/beginner/transformer_tutorial.html\\n        # max_len determines how far the position can have an effect on a token (window)\\n        \\n        # Info\\n        self.dropout = nn.Dropout(dropout_p)\\n        \\n        # Encoding - From formula\\n        pos_encoding = torch.zeros(max_len, dim_model)\\n        positions_list = torch.arange(0, max_len, dtype=torch.float).view(-1, 1) # 0, 1, 2, 3, 4, 5\\n        division_term = torch.exp(torch.arange(0, dim_model, 2).float() * (-np.log(10000.0)) / dim_model) # 1000^(2i/dim_model)\\n        \\n        # PE(pos, 2i) = sin(pos/1000^(2i/dim_model))\\n        pos_encoding[:, 0::2] = torch.sin(positions_list * division_term)\\n        \\n        # PE(pos, 2i + 1) = cos(pos/1000^(2i/dim_model))\\n        pos_encoding[:, 1::2] = torch.cos(positions_list * division_term)\\n        \\n        # Saving buffer (same as parameter without gradients needed)\\n        pos_encoding = pos_encoding.unsqueeze(0).transpose(0, 1)\\n        self.register_buffer(\"pos_encoding\",pos_encoding)\\n        \\n    def forward(self, token_embedding: torch.tensor) -> torch.tensor:\\n        # Residual connection + pos encoding\\n        return self.dropout(token_embedding + self.pos_encoding[:token_embedding.size(0), :])\\n'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, dim_model, dropout_p, max_len):\n",
+    "        super().__init__()\n",
+    "        # Modified version from: https://pytorch.org/tutorials/beginner/transformer_tutorial.html\n",
+    "        # max_len determines how far the position can have an effect on a token (window)\n",
+    "        \n",
+    "        # Info\n",
+    "        self.dropout = nn.Dropout(dropout_p)\n",
+    "        \n",
+    "        # Encoding - From formula\n",
+    "        pos_encoding = torch.zeros(max_len, dim_model)\n",
+    "        positions_list = torch.arange(0, max_len, dtype=torch.float).view(-1, 1) # 0, 1, 2, 3, 4, 5\n",
+    "        division_term = torch.exp(torch.arange(0, dim_model, 2).float() * (-np.log(10000.0)) / dim_model) # 1000^(2i/dim_model)\n",
+    "        \n",
+    "        # PE(pos, 2i) = sin(pos/1000^(2i/dim_model))\n",
+    "        pos_encoding[:, 0::2] = torch.sin(positions_list * division_term)\n",
+    "        \n",
+    "        # PE(pos, 2i + 1) = cos(pos/1000^(2i/dim_model))\n",
+    "        pos_encoding[:, 1::2] = torch.cos(positions_list * division_term)\n",
+    "        \n",
+    "        # Saving buffer (same as parameter without gradients needed)\n",
+    "        pos_encoding = pos_encoding.unsqueeze(0).transpose(0, 1)\n",
+    "        self.register_buffer(\"pos_encoding\",pos_encoding)\n",
+    "        \n",
+    "    def forward(self, token_embedding: torch.tensor) -> torch.tensor:\n",
+    "        # Residual connection + pos encoding\n",
+    "        return self.dropout(token_embedding + self.pos_encoding[:token_embedding.size(0), :])\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +261,7 @@
     "        Create sinusoidal positional encodings for the time steps.\n",
     "        \"\"\"\n",
     "        encoding = torch.zeros(max_len, d_model)\n",
-    "        pos = torch.arange(0, max_len).unsqueeze(1).float()\n",
+    "        pos = torch.arange(0, max_len, dtype=torch.float).view(-1, 1)\n",
     "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * -(np.log(10000.0) / d_model))\n",
     "        \n",
     "        encoding[:, 0::2] = torch.sin(pos * div_term)  # Apply sin to even indices\n",
@@ -243,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +319,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only Transformer Encoder, Full Transformer would also require true function values shifted by one which goes against the specifications of the task. Maybe try only Transformer Decoder."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -281,12 +336,21 @@
      "text": [
       "torch.Size([64, 128])\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/transformer.py:292: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
     }
    ],
    "source": [
     "train_loader = torch.utils.data.DataLoader(dataset=synthetic_dataset, batch_size=64, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
     "model = TimeSeriesTransformer().to(device)\n",
+    "X = np.linspace(0, 1, 128)\n",
     "\n",
     "for function_values, observations in train_loader:\n",
     "    \n",
