2nd model version test

--- a/Arwin/src/inference_model.ipynb
+++ b/Arwin/src/inference_model.ipynb
@@ -18,6 +18,7 @@
     "import os\n",
     "import shutil\n",
     "import numpy as np\n",
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
@@ -32,27 +33,40 @@
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "data_path = 'Arwin/dataset/synthetic_dataset.pkl'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling Functions from Beta Distribution 1/3 with a=2, b=5: 100%|██████████| 33333/33333 [01:53<00:00, 293.36it/s]\n",
-      "Sampling Functions from Beta Distribution 2/3 with a=3, b=3: 100%|██████████| 33333/33333 [01:46<00:00, 313.32it/s]\n",
-      "Sampling Functions from Beta Distribution 3/3 with a=5, b=2: 100%|██████████| 33334/33334 [01:47<00:00, 311.51it/s]\n",
-      "Generating Observations: 100%|██████████| 100000/100000 [00:07<00:00, 13508.47it/s]\n"
+      "Sampling Functions from Beta Distribution 1/3 with a=2, b=5: 100%|██████████| 33333/33333 [02:41<00:00, 207.03it/s]\n",
+      "Sampling Functions from Beta Distribution 2/3 with a=3, b=3: 100%|██████████| 33333/33333 [02:30<00:00, 221.38it/s]\n",
+      "Sampling Functions from Beta Distribution 3/3 with a=5, b=2: 100%|██████████| 33334/33334 [02:03<00:00, 270.08it/s]\n",
+      "Generating Observations: 100%|██████████| 100000/100000 [00:07<00:00, 13793.31it/s]\n"
      ]
     }
    ],
    "source": [
-    "synthetic_dataset = SyntheticDataset(100000, 128, padding=False, verbose=True)"
+    "synthetic_dataset = SyntheticDataset(100000, 128, padding=False, verbose=True)\n",
+    "\n",
+    "with open(data_path, 'wb') as f:\n",
+    "    pickle.dump(synthetic_dataset, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "synthetic_dataset = pickle.load(open(data_path, 'rb'))"
    ]
   },
   {
@@ -171,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,20 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.10/dist-packages/torch/optim/lr_scheduler.py:223: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+      "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/transformer.py:379: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(\n",
+      "/usr/local/lib/python3.10/dist-packages/torch/optim/lr_scheduler.py:224: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "TBOARD_LOGS = os.path.join(\"./Arwin/src\", \"tboard_logs\", \"model_1.0\")\n",
+    "TBOARD_LOGS = os.path.join(\"./Arwin\", \"tboard_logs\", \"model_1.1\")\n",
     "if not os.path.exists(TBOARD_LOGS):\n",
     "    os.makedirs(TBOARD_LOGS)\n",
     "shutil.rmtree(TBOARD_LOGS) \n",
@@ -356,162 +372,162 @@
     "X = np.linspace(0, 1, 128)\n",
     "deeponet = DeepONet(X).to(device)\n",
     "criterion = nn.MSELoss()\n",
-    "trainer = Trainer(model=deeponet, criterion=criterion, train_loader=train_loader, valid_loader=validation_loader, modelname=\"model1.0\", n_iters=2, writer=writer)"
+    "trainer = Trainer(model=deeponet, criterion=criterion, train_loader=train_loader, valid_loader=validation_loader, modelname=\"model1.1\", n_iters=2, writer=writer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 1: Loss=1.09332:   0%|          | 0/1250 [00:00<?, ?it/s]"
+      "Ep 0 Iter 1: Loss=0.98852:   0%|          | 0/1250 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 0: Loss=1.1002334356307983\n"
+      "Valid loss @ iteration 0: Loss=0.9851406216621399\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 200: Loss=0.66875:  16%|█▌        | 200/1250 [01:38<08:32,  2.05it/s]/usr/local/lib/python3.10/dist-packages/torch/optim/lr_scheduler.py:239: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
+      "Ep 0 Iter 200: Loss=0.36537:  16%|█▌        | 200/1250 [01:46<09:17,  1.88it/s]/usr/local/lib/python3.10/dist-packages/torch/optim/lr_scheduler.py:240: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
       "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
-      "Ep 0 Iter 251: Loss=0.59699:  20%|██        | 250/1250 [02:03<08:06,  2.06it/s]"
+      "Ep 0 Iter 251: Loss=0.30978:  20%|██        | 250/1250 [02:13<08:46,  1.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 250: Loss=0.5481511950492859\n"
+      "Valid loss @ iteration 250: Loss=0.3439403474330902\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 501: Loss=0.25989:  40%|████      | 500/1250 [04:07<06:06,  2.05it/s]"
+      "Ep 0 Iter 501: Loss=0.20374:  40%|████      | 500/1250 [04:26<06:30,  1.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 500: Loss=0.2558992803096771\n"
+      "Valid loss @ iteration 500: Loss=0.2162237912416458\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 751: Loss=0.21954:  60%|██████    | 750/1250 [06:12<04:08,  2.02it/s]"
+      "Ep 0 Iter 751: Loss=0.16477:  60%|██████    | 750/1250 [06:38<04:21,  1.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 750: Loss=0.19723212718963623\n"
+      "Valid loss @ iteration 750: Loss=0.18113353848457336\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 1001: Loss=0.18035:  80%|████████  | 1000/1250 [08:15<02:00,  2.07it/s]"
+      "Ep 0 Iter 1001: Loss=0.14267:  80%|████████  | 1000/1250 [08:50<02:10,  1.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 1000: Loss=0.17224614322185516\n"
+      "Valid loss @ iteration 1000: Loss=0.1559114009141922\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 1250: Loss=0.15997: 100%|██████████| 1250/1250 [10:15<00:00,  2.03it/s]\n",
-      "Ep 1 Iter 1: Loss=0.10894:   0%|          | 0/1250 [00:00<?, ?it/s]"
+      "Ep 0 Iter 1250: Loss=0.10707: 100%|██████████| 1250/1250 [11:00<00:00,  1.89it/s]\n",
+      "Ep 1 Iter 1: Loss=0.12064:   0%|          | 0/1250 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 1250: Loss=0.15653172135353088\n"
+      "Valid loss @ iteration 1250: Loss=0.14230714738368988\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 1 Iter 251: Loss=0.17496:  20%|██        | 250/1250 [02:01<07:59,  2.08it/s]"
+      "Ep 1 Iter 251: Loss=0.13173:  20%|██        | 250/1250 [02:12<08:43,  1.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 1500: Loss=0.14902475476264954\n"
+      "Valid loss @ iteration 1500: Loss=0.13097704946994781\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 1 Iter 501: Loss=0.15107:  40%|████      | 500/1250 [04:02<05:57,  2.10it/s]"
+      "Ep 1 Iter 501: Loss=0.14884:  40%|████      | 500/1250 [04:25<06:33,  1.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 1750: Loss=0.13985757529735565\n"
+      "Valid loss @ iteration 1750: Loss=0.12497316300868988\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 1 Iter 751: Loss=0.12113:  60%|██████    | 750/1250 [06:02<03:57,  2.11it/s]"
+      "Ep 1 Iter 751: Loss=0.11004:  60%|██████    | 750/1250 [06:36<04:15,  1.96it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 2000: Loss=0.13263511657714844\n"
+      "Valid loss @ iteration 2000: Loss=0.11737149953842163\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 1 Iter 1001: Loss=0.12279:  80%|████████  | 1000/1250 [08:02<01:58,  2.12it/s]"
+      "Ep 1 Iter 1001: Loss=0.12792:  80%|████████  | 1000/1250 [08:52<02:14,  1.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 2250: Loss=0.13183602690696716\n"
+      "Valid loss @ iteration 2250: Loss=0.11183671653270721\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 1 Iter 1250: Loss=0.17508: 100%|█████████▉| 1249/1250 [10:04<00:00,  2.06it/s]\n"
+      "Ep 1 Iter 1250: Loss=0.10422: 100%|█████████▉| 1249/1250 [11:04<00:00,  1.88it/s]\n"
      ]
     },
     {
