added final tensor board logs

--- a/Arwin/src/inference_model.ipynb
+++ b/Arwin/src/inference_model.ipynb
@@ -2247,6 +2247,205 @@
       "Ep 17 Iter 313: Loss=0.02727: 100%|██████████| 313/313 [05:26<00:00,  1.04s/it]\n",
       "Ep 18 Iter 8: Loss=0.01579:   2%|▏         | 7/313 [00:07<05:04,  1.00it/s]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 17: Loss=0.02485:   5%|▌         | 16/313 [00:16<04:57,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5650: Loss=0.02057800518677515\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 67: Loss=0.01285:  21%|██        | 66/313 [01:09<04:06,  1.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5700: Loss=0.02115461201060052\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 117: Loss=0.01796:  37%|███▋      | 116/313 [02:01<03:17,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5750: Loss=0.020275975961019013\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 167: Loss=0.02873:  53%|█████▎    | 166/313 [02:54<02:26,  1.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5800: Loss=0.020919890709075274\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 217: Loss=0.01582:  69%|██████▉   | 216/313 [03:48<01:37,  1.01s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5850: Loss=0.020326943721110914\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 267: Loss=0.0167:  85%|████████▍ | 266/313 [04:42<00:47,  1.01s/it] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5900: Loss=0.019790029244533942\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 18 Iter 313: Loss=0.01706: 100%|██████████| 313/313 [05:30<00:00,  1.06s/it]\n",
+      "Ep 19 Iter 4: Loss=0.01508:   1%|          | 3/313 [00:04<05:11,  1.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 5950: Loss=0.019416931377468156\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 54: Loss=0.02622:  17%|█▋        | 53/313 [00:55<04:11,  1.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6000: Loss=0.0206732856401918\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 104: Loss=0.01824:  33%|███▎      | 103/313 [01:48<03:25,  1.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6050: Loss=0.01913559135487851\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 154: Loss=0.01578:  49%|████▉     | 153/313 [02:39<02:39,  1.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6100: Loss=0.018969038391814512\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 204: Loss=0.02131:  65%|██████▍   | 203/313 [03:31<01:49,  1.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6150: Loss=0.023525973562808597\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 254: Loss=0.01294:  81%|████████  | 253/313 [04:23<01:00,  1.01s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6200: Loss=0.019950312178801086\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 304: Loss=0.0081:  97%|█████████▋| 303/313 [05:15<00:10,  1.00s/it] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid loss @ iteration 6250: Loss=0.02031505531540104\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ep 19 Iter 313: Loss=0.01775: 100%|█████████▉| 312/313 [05:27<00:01,  1.05s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
