--- a/Arwin/model/test.ipynb
+++ b/Arwin/model/test.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TBOARD_LOGS = os.path.join(\"./Arwin\", \"tboard_logs\", \"IM1_test_old_data\")\n",
+    "TBOARD_LOGS = os.path.join(\"./Arwin\", \"tboard_logs\", \"IM1_test2_old_data\")\n",
     "if not os.path.exists(TBOARD_LOGS):\n",
     "    os.makedirs(TBOARD_LOGS)\n",
     "shutil.rmtree(TBOARD_LOGS) \n",
@@ -112,131 +112,131 @@
     "\n",
     "deeponet = DeepONet(indicator_dim=indicator_dim, d_model=128, heads=2, p=128).to(device)\n",
     "criterion = nn.MSELoss()\n",
-    "trainer = Trainer(model=deeponet, criterion=criterion, train_loader=train_loader, valid_loader=validation_loader, modelname=\"IM1_test_old_data\", epochs=1, writer=writer)"
+    "trainer = Trainer(model=deeponet, criterion=criterion, train_loader=train_loader, valid_loader=validation_loader, modelname=\"IM1_test2_old_data\", epochs=1, writer=writer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 1: Loss=4.60431:   0%|          | 0/391 [00:01<?, ?it/s]"
+      "Ep 0 Iter 1: Loss=1.00008:   0%|          | 0/391 [00:01<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 0: Loss=3.8943673968315125\n"
+      "Valid loss @ iteration 0: Loss=1.0000367164611816\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 51: Loss=0.95691:  13%|█▎        | 50/391 [00:58<06:14,  1.10s/it]"
+      "Ep 0 Iter 51: Loss=0.42655:  13%|█▎        | 50/391 [01:01<06:41,  1.18s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 50: Loss=0.9449968338012695\n"
+      "Valid loss @ iteration 50: Loss=0.44927891716361046\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 101: Loss=0.52609:  26%|██▌       | 100/391 [01:54<05:21,  1.11s/it]"
+      "Ep 0 Iter 101: Loss=0.43601:  26%|██▌       | 100/391 [02:01<05:32,  1.14s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 100: Loss=0.48773299902677536\n"
+      "Valid loss @ iteration 100: Loss=0.4092009849846363\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 151: Loss=0.42879:  38%|███▊      | 150/391 [02:51<04:26,  1.11s/it]"
+      "Ep 0 Iter 151: Loss=0.42706:  38%|███▊      | 150/391 [03:00<04:38,  1.16s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 150: Loss=0.4040740244090557\n"
+      "Valid loss @ iteration 150: Loss=0.4825812354683876\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 201: Loss=0.23386:  51%|█████     | 200/391 [03:47<03:28,  1.09s/it]"
+      "Ep 0 Iter 201: Loss=0.23276:  51%|█████     | 200/391 [04:00<03:38,  1.14s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 200: Loss=0.2207348570227623\n"
+      "Valid loss @ iteration 200: Loss=0.2068569427356124\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 251: Loss=0.23658:  64%|██████▍   | 250/391 [04:44<02:36,  1.11s/it]"
+      "Ep 0 Iter 251: Loss=0.21065:  64%|██████▍   | 250/391 [04:59<02:43,  1.16s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 250: Loss=0.20880890358239412\n"
+      "Valid loss @ iteration 250: Loss=0.18529073055833578\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 301: Loss=0.20008:  77%|███████▋  | 300/391 [05:41<01:40,  1.10s/it]"
+      "Ep 0 Iter 301: Loss=0.17802:  77%|███████▋  | 300/391 [05:58<01:44,  1.15s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 300: Loss=0.20040403213351965\n"
+      "Valid loss @ iteration 300: Loss=0.16290128882974386\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 351: Loss=0.23587:  90%|████████▉ | 350/391 [06:38<00:44,  1.10s/it]"
+      "Ep 0 Iter 351: Loss=0.17941:  90%|████████▉ | 350/391 [06:57<00:47,  1.17s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid loss @ iteration 350: Loss=0.19371278584003448\n"
+      "Valid loss @ iteration 350: Loss=0.14298695605248213\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Ep 0 Iter 391: Loss=0.22018: 100%|█████████▉| 390/391 [07:24<00:01,  1.14s/it]\n"
+      "Ep 0 Iter 391: Loss=0.11295: 100%|█████████▉| 390/391 [07:45<00:01,  1.19s/it]\n"
      ]
     },
     {
